--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,5 +86,11 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
+
+    <!-- Support for LaTeX -->
+    <script type="text/javascript"
+      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+            
   </body>
 </html>
