--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,22 +3,12 @@
   <head>
     <meta charset="UTF-8">
 
-    {% seo %}
-    
+{% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-
-      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/vs.min.css" />
-      <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
-      <script>hljs.initHighlightingOnLoad();</script>
-      
-      <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/9.5.0/styles/default.min.css" />
-      <script src="//cdn.jsdelivr.net/highlight.js/9.5.0/highlight.min.js"></script>
-      <script>hljs.initHighlightingOnLoad();</script>
-
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
@@ -32,40 +22,6 @@
     </section>
 
     <section class="main-content">
-
-      <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-          tex2jax: {
-            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-            inlineMath: [['$','$']]
-            displayMath: [['$$','$$'], ["\\[","\\]"]],
-          }
-        });
-      </script>
-      <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-  
-      <!--
-      <script type = "text/javascript" src = "http://cdn.mathjax.org/mathjax/latest/MathJax.js">
-        MathJax.Hub.Config({          
-          extensions:[            
-            "tex2jax.js",
-            "TeX/AMSmath.js",
-            "TeX/AMSsymbols.js"
-          ],          
-          jax:[
-            "input/TeX",
-            "output/HTML-CSS"
-          ],
-          tex2jax:{
-            inlineMath: [['$','$'], ["\\(","\\)"]],
-            displayMath: [['$$','$$'], ["\\[","\\]"]],
-            processEscapes: true
-          },
-          "HTML-CSS": { availableFonts: ["TeX"] }
-        });
-        </script>
-        -->  
-
       {{ content }}
 
       <footer class="site-footer">
@@ -76,22 +32,18 @@
       </footer>
     </section>
 
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+  
     {% if site.google_analytics %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
         ga('create', '{{ site.google_analytics }}', 'auto');
         ga('send', 'pageview');
       </script>
     {% endif %}
-
-    <!-- Support for LaTeX -->
-    <script type="text/javascript"
-      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-            
   </body>
 </html>
