--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
     </section>
 
     <section class="main-content">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+      
       {{ content }}
 
       <footer class="site-footer">
@@ -32,9 +34,7 @@
       </footer>
     </section>
 
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
-  
+ 
     {% if site.google_analytics %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
