--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,10 @@
       </footer>
     </section>
 
- 
+    <!-- Support for LaTeX -->
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+
     {% if site.google_analytics %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
