footer copyright foont remove bold

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -343,6 +343,10 @@ a {
   font-weight: bold;
 }
 
+.site-footer-copyright {
+  display: block;
+}
+
 .site-footer-credits {
   color: $blockquote-text-color;
 }
