--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,14 @@
 
     <section class="main-content">
 
-      <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>      
+      <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+        MathJax.Hub.Config({
+          extensions: ["tex2jax.js", "TeX/AMSmath.js", "TeX/AMSsymbols.js" ],
+          jax: ["input/TeX", "output/HTML-CSS"],
+          tex2jax: { inlineMath: [['$','$'], ["\\(","\\)"]], displayMath: [['$$','$$'], ["\\[","\\]"]], processEscapes: true },
+          "HTML-CSS": { availableFonts: ["TeX"] }
+        });
+      </script>      
 
       {{ content }}
 
