--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -90,10 +90,10 @@ a {
 .page-header {
   color: $header-heading-color;
   text-align: center;
-  background-color: $header-bg-color;
+//  background-color: $header-bg-color;
   background-image: url("../pytorch.jpg");
 //  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+//  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
   @include large {
     padding: 5rem 6rem;
