--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
       {{ content }}
 
-      <div class="fb-comments" data-href="https://booiljung.github.io/" data-width="640" data-numposts="5"></div>      
+      <div class="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>      
 
       <footer class="site-footer">
         <span class="site-footer-copyright">이 블로그의 콘텐트의 모든 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.</span>
