--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,17 +14,7 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
     </section>
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v3.0&appId=233012396808363&autoLogAppEvents=1';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>    
-
     <section class="main-content">
-
       <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
         MathJax.Hub.Config({
           extensions: ["tex2jax.js", "TeX/AMSmath.js", "TeX/AMSsymbols.js" ],
@@ -36,7 +26,31 @@
 
       {{ content }}
 
+      <div id="fb-comments" data-width="100%" data-numposts="5"></div>
+
+      <script type="text/javascript">
+        function addFacebookComment(node){
+          var fbComment = document.getElementById("fb-comments");
+          fbComment.setAttribute("class", "fb-comments")
+          fbComment.setAttribute("data-href", document.location.href);
+        }
+        addFacebook(document);
+      </script>      
+
+      <div id="fb-root"></div>
+      <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id))
+          return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v3.0&appId=233012396808363&autoLogAppEvents=1';
+        fjs.parentNode.insertBefore(js, fjs);
+      } (document, 'script', 'facebook-jssdk'));</script>    
+  
+      <!--
       <div class="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>      
+      -->
 
       <footer class="site-footer">
         <span class="site-footer-copyright">이 블로그의 콘텐트의 모든 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.</span>
