--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,19 @@
 
       {{ content }}
 
+      <div id="fb-root"></div>
+      <script>
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id))
+          return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v3.0&appId=233012396808363&autoLogAppEvents=1';
+        fjs.parentNode.insertBefore(js, fjs);
+      } (document, 'script', 'facebook-jssdk'));
+      </script>    
+
       <div id="fb-comments" data-width="100%" data-numposts="5"></div>
 
       <script type="text/javascript">
@@ -37,17 +50,6 @@
         addFacebook(document);
       </script>      
 
-      <div id="fb-root"></div>
-      <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id))
-          return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = 'https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v3.0&appId=233012396808363&autoLogAppEvents=1';
-        fjs.parentNode.insertBefore(js, fjs);
-      } (document, 'script', 'facebook-jssdk'));</script>    
-  
       <!--
       <div class="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>      
       -->
