--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,20 +39,16 @@
       } (document, 'script', 'facebook-jssdk'));
       </script>    
 
-      <div id="fb-comments" data-width="100%" data-numposts="5"></div>
+      <div class="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>
 
       <script type="text/javascript">
         function addFacebookComment(node){
           var fbComment = document.getElementById("fb-comments");
           fbComment.setAttribute("class", "fb-comments")
-          fbComment.setAttribute("data-href", document.location.href);
+          fbComment.setAttribute("data-href", window.location.href);
         }
         addFacebook(document);
       </script>      
-
-      <!--
-      <div class="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>      
-      -->
 
       <footer class="site-footer">
         <span class="site-footer-copyright">이 블로그의 콘텐트의 모든 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.</span>
