--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       } (document, 'script', 'facebook-jssdk'));
       </script>    
 
-      <div class="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>
+      <div class="fb-comments" id="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>
 
       <script type="text/javascript">
         function addFacebookComment(node){
