--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,12 +42,11 @@
       <div class="fb-comments" id="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>
 
       <script type="text/javascript">
-        function addFacebookComment(node){
+        function addFacebookComment(){
           var fbComment = document.getElementById("fb-comments");
-          fbComment.setAttribute("class", "fb-comments")
           fbComment.setAttribute("data-href", window.location.href);
         }
-        addFacebook(document);
+        addFacebook();
       </script>      
 
       <footer class="site-footer">
