--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
         function addFacebookComment(){
           var fbComment = document.getElementById("fb-comments");
           fbComment.setAttribute("data-href", window.location.href);
+          fbComment.innerHTML = window.location.href + 5
         }
         addFacebook();
       </script>      
