--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,15 +41,15 @@
 
       <div class="fb-comments" id="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>
 
-      <p>100</p>
-      
+      <p id="ooo">101</p>
+
       <script type="text/javascript">
         function addFacebookComment(){
           var fbComment = document.getElementById("fb-comments");
           fbComment.setAttribute("data-href", window.location.href);
           fbComment.innerHTML = window.location.href + 5
         }
-        addFacebook();
+        addFacebookComment();
       </script>      
 
       <footer class="site-footer">
