--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       </script>    
 
 
-      <p id="ooo">103</p>
+      <p id="ooo">104</p>
 
 
       <div class="fb-comments" id="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>
@@ -48,7 +48,9 @@
       (function(){
         var fbComment = document.getElementById("fb-comments");
         fbComment.setAttribute("data-href", window.location.href);
-        fbComment.innerHTML = window.location.href + 5
+        fbComment.innerHTML = window.location.href + 5;
+        var ooo = document.getElementById("ooo");
+        ooo.innerHTML = window.location.href + 104;
       }())
       </script>      
 
