--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,12 @@
 
   <body>
     <section class="page-header">
-      <h1 class="project-name"><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
+      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+    </section>
+
+    <section class="main-content">
+      <a href="/">Top</a>
     </section>
 
     <section class="main-content">
