--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -208,6 +208,7 @@ a {
     border-radius: 0.3rem;
 
     > code {
+      tab-size: 4;
       padding: 0;
       margin: 0;
       font-size: 0.9rem;
