code -moz-tab-size: 4

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -195,6 +195,7 @@ a {
     background-color: $code-bg-color;
     border-radius: 0.3rem;
     tab-size: 4;
+    -moz-tab-size: 4; /* Firefox */
   }
 
   pre {
