--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,12 @@
           <a href="https://github.com/booiljung">github</a> 
           <a href="https://www.facebook.com/booiltedjung">facebook</a>
         </span>
-        <span class="site-footer-copyright">이 블로그 콘텐트의 모든 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.<br/>출처를 밝히지 않고 퍼가는 경우가 있어서 금지를 했습니다. 양해 바랍니다.</span>
+        <span class="site-footer-copyright">
+		이 블로그 콘텐트의 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.<br/>
+		이 블로그의 소스코드는 MIT 라이센스를 적용합니다.<br/>
+		이 블로그에서 생성한 2차 저작물의 권리는 1차 저작자에게 있습니다.<br/>
+		출처를 밝히지 않고 퍼가는 경우가 목격되어 금지를 했습니다. 양해 바랍니다.
+	</span>
       </footer>
 
     </section>
