--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,33 +2,49 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+   <!--Import Google Icon Font-->
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <!--Import materialize.css-->
+   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+   <!--Let browser know website is optimized for mobile-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+   <link type="text/css" rel="stylesheet" href="css/classes.css"  media="stylesheet"/>
   </head>
 
   <body>
-    <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-    </section>
 
-    <section class="main-content">
-      <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_CHTML">
-        MathJax.Hub.Config({
-          extensions: ["tex2jax.js", "TeX/AMSmath.js", "TeX/AMSsymbols.js" ],
-          jax: ["input/TeX", "output/HTML-CSS"],
-          tex2jax: { inlineMath: [['$','$']], displayMath: [['$$','$$']], processEscapes: true },
-          "HTML-CSS": { availableFonts: ["TeX"] }
-        });
-      </script>
+  <!-- Dropdown Structure -->
+  <ul id="dropdown1" class="dropdown-content">
+    <li><a href="#!">one</a></li>
+    <li><a href="#!">two</a></li>
+    <li class="divider"></li>
+    <li><a href="#!">three</a></li>
+  </ul>    
+  <nav>
+    <div class="nav-wrapper blue accent-4">
+      <a href="" class="brand-logo">Booil Jung</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="https://booiljung.gihub.io/technical_articles/index.md">Articles</a></li>
+        <li><a href="https://booiljung.gihub.io/book_reviews/index.md">Books</a></li>
+        <!-- Dropdown Trigger -->
+        <!--<li><a class="dropdown-trigger" href="#!" data-target="dropdown1">...<i class="material-icons right">arrow_drop_down</i></a></li>-->
+      </ul>
+    </div>
+  </nav>
 
-      <a href="/">Top</a>
+  <section class="main-content">
+    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_CHTML">
+      MathJax.Hub.Config({
+        extensions: ["tex2jax.js", "TeX/AMSmath.js", "TeX/AMSsymbols.js" ],
+        jax: ["input/TeX", "output/HTML-CSS"],
+        tex2jax: { inlineMath: [['$','$']], displayMath: [['$$','$$']], processEscapes: true },
+        "HTML-CSS": { availableFonts: ["TeX"] }
+      });
+    </script>
 
-      {{ content }}
+    {{ content }}
 
-      <div id="fb-root"></div>
+    <div id="fb-root"></div>
       <script>
       (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
@@ -40,42 +56,55 @@
         fjs.parentNode.insertBefore(js, fjs);
       } (document, 'script', 'facebook-jssdk'));
       </script>    
-
       <div class="fb-comments" id="fb-comments" data-href="https://booiljung.github.io/" data-width="100%" data-numposts="5"></div>
       <script>
-      (function(){
-        var fbComment = document.getElementById("fb-comments");
-        fbComment.setAttribute("data-href", window.location.href);
-      }())
+        (function(){
+          var fbComment = document.getElementById("fb-comments");
+          fbComment.setAttribute("data-href", window.location.href);
+        }())
       </script>
-      
-      <script>
-        (function() {
-          var cx = '012971652190830977012:udy7jvimsgm';
-          var gcse = document.createElement('script');
-          gcse.type = 'text/javascript';
-          gcse.async = true;
-          gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-          var s = document.getElementsByTagName('script')[0];
-          s.parentNode.insertBefore(gcse, s);
-        })();
-      </script>
-      <gcse:search></gcse:search>      
+  </section>
 
-      <footer class="site-footer">
-        <span class="site-footer-owner">
-          <a href="https://github.com/booiljung">github</a> 
-          <a href="https://www.facebook.com/booiltedjung">facebook</a>
-        </span>
-        <span class="site-footer-copyright">
-		이 블로그 콘텐트의 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.<br/>
-		이 블로그의 소스코드는 MIT 라이센스를 적용합니다.<br/>
-		이 블로그에서 생성한 2차 저작물의 권리는 1차 저작자에게 있습니다.<br/>
-		출처를 밝히지 않고 퍼가는 경우가 목격되어 금지를 했습니다. 양해 바랍니다.
-	</span>
-      </footer>
-
-    </section>
+  <footer class="page-footer blue accent-4">
+      <!--
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <script>
+                (function() {
+                  var cx = '012971652190830977012:udy7jvimsgm';
+                  var gcse = document.createElement('script');
+                  gcse.type = 'text/javascript';
+                  gcse.async = true;
+                  gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                  var s = document.getElementsByTagName('script')[0];
+                  s.parentNode.insertBefore(gcse, s);
+                })();
+              </script>
+              <gcse:search></gcse:search> 
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="https://github.com/booiljung">github</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/booiltedjung">facebook</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    -->
+    <div class="footer-copyright">
+        <div class="container">
+          <ul>
+            <li>이 블로그 콘텐트의 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.</li>
+            <li>이 블로그의 소스코드는 MIT 라이센스를 적용합니다.</li>
+            <li>이 블로그에서 생성한 2차 저작물의 권리는 1차 저작자에게 있습니다.</li>
+            <li>출처 표시를 요구했음에도 불구하고 자신의 글처럼 포장하여 전제하는 사례가 목격되어 금지를 했습니다. 양해 바랍니다.</li>
+          </ul>
+          <a class="grey-text text-lighten-4 center" href="https://materializecss.com/about.html">Stype sheet is provided by Materialize</a>
+        </div>
+      </div>
+    </footer>    
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117607984-2"></script>
