--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
     <div class="nav-wrapper blue accent-4">
       <a href="" class="brand-logo">Booil Jung</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="https://booiljung.gihub.io/technical_articles/index.md">Articles</a></li>
-        <li><a href="https://booiljung.gihub.io/book_reviews/index.md">Books</a></li>
+        <li><a href="https://booiljung.gihub.io/technical_articles/">Articles</a></li>
+        <li><a href="https://booiljung.gihub.io/book_reviews/">Books</a></li>
         <!-- Dropdown Trigger -->
         <!--<li><a class="dropdown-trigger" href="#!" data-target="dropdown1">...<i class="material-icons right">arrow_drop_down</i></a></li>-->
       </ul>
