--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
    <!--Import Google Icon Font-->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!--Import materialize.css-->
-   <link type="text/css" rel="stylesheet" href="https://booiljung.github.io/_layouts/css/materialize.min.css"  media="screen,projection"/>
+   <link type="text/css" rel="stylesheet" href="./css/materialize.min.css"  media="screen,projection"/>
    <!--Let browser know website is optimized for mobile-->
    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-   <link type="text/css" rel="stylesheet" href="https://booiljung.github.io/_layouts/css/classes.css"  media="stylesheet"/>
+   <link type="text/css" rel="stylesheet" href="./css/classes.css"  media="stylesheet"/>
   </head>
 
   <body>
