move css file to assets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-   <!--Import Google Icon Font-->
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-   <!--Import materialize.css-->
-   <link type="text/css" rel="stylesheet" href="./css/materialize.min.css"  media="screen,projection"/>
-   <!--Let browser know website is optimized for mobile-->
-   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-   <link type="text/css" rel="stylesheet" href="./css/classes.css"  media="stylesheet"/>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="./css/materialize.min.css"  media="screen,projection"/>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link type="text/css" rel="stylesheet" href="./css/classes.css"  media="stylesheet"/>
+</head>
 
-  <body>
-
+<body>
   <!-- Dropdown Structure -->
   <ul id="dropdown1" class="dropdown-content">
     <!--
@@ -24,7 +23,7 @@
   </ul>    
   <nav>
     <div class="nav-wrapper blue accent-4">
-      <a href="" class="brand-logo">Booil Jung</a>
+      <a href="https://booiljung.gihub.io/" class="brand-logo">Booil Jung</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="https://booiljung.gihub.io/technical_articles/">Articles</a></li>
         <li><a href="https://booiljung.gihub.io/book_reviews/">Books</a></li>
@@ -68,54 +67,54 @@
   </section>
 
   <footer class="page-footer blue accent-4">
-      <!--
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <script>
-                (function() {
-                  var cx = '012971652190830977012:udy7jvimsgm';
-                  var gcse = document.createElement('script');
-                  gcse.type = 'text/javascript';
-                  gcse.async = true;
-                  gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-                  var s = document.getElementsByTagName('script')[0];
-                  s.parentNode.insertBefore(gcse, s);
-                })();
-              </script>
-              <gcse:search></gcse:search> 
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="https://github.com/booiljung">github</a></li>
-              <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/booiltedjung">facebook</a></li>
-            </ul>
-          </div>
+    <!--
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <script>
+              (function() {
+                var cx = '012971652190830977012:udy7jvimsgm';
+                var gcse = document.createElement('script');
+                gcse.type = 'text/javascript';
+                gcse.async = true;
+                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(gcse, s);
+              })();
+            </script>
+            <gcse:search></gcse:search> 
         </div>
-      </div>
-    -->
-    <div class="footer-copyright">
-        <div class="container">
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
           <ul>
-            <li>이 블로그 콘텐트의 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.</li>
-            <li>이 블로그의 소스코드는 MIT 라이센스를 적용합니다.</li>
-            <li>이 블로그에서 생성한 2차 저작물의 권리는 1차 저작자에게 있습니다.</li>
-            <li>출처 표시를 요구했음에도 불구하고 자신의 글처럼 포장하여 전제하는 사례가 목격되어 금지를 했습니다. 양해 바랍니다.</li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/booiljung">github</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/booiltedjung">facebook</a></li>
           </ul>
-          <a class="grey-text text-lighten-4 center" href="https://materializecss.com/about.html">Stype sheet is provided by Materialize</a>
         </div>
       </div>
-    </footer>    
+    </div>
+  -->
+  <div class="footer-copyright">
+      <div class="container">
+        <ul>
+          <li>이 블로그 콘텐트의 권리는 Booil Jung에게 있으며 허락없이 복사 게시를 금지합니다.</li>
+          <li>이 블로그의 소스코드는 MIT 라이센스를 적용합니다.</li>
+          <li>이 블로그에서 생성한 2차 저작물의 권리는 1차 저작자에게 있습니다.</li>
+          <li>출처 표시를 요구했음에도 불구하고 자신의 글처럼 포장하여 전제하는 사례가 목격되어 금지를 했습니다. 양해 바랍니다.</li>
+        </ul>
+        <a class="grey-text text-lighten-4 center" href="https://materializecss.com/about.html">Stype sheet is provided by Materialize</a>
+      </div>
+    </div>
+  </footer>    
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117607984-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-117607984-2');
-    </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117607984-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-117607984-2');
+  </script>
 
-  </body>
+</body>
 </html>
