--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
   <!--link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/-->
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link type="text/css" rel="stylesheet" href="/css/github.css"  media="stylesheet"/>
